# smallstep-python

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yml  pypi.yml
examples/: dot_env  example.py
scripts/: openapi-python-client.yml  update_openapi.sh
smallstep/: README.md  api.py  client.py  config.py  exceptions.py
smallstep/api_client/: __init__.py
smallstep/api_client/api/attestation/: delete_attestation_authority.py  get_attestation_authorities.py  get_attestation_authority.py  post_attestation_authorities.py
smallstep/api_client/api/authenticate/: post_auth.py
smallstep/api_client/api/authorities/: delete_authority.py  get_authorities.py  get_authority.py  post_authorities.py  (+2 more)
smallstep/api_client/models/: __init__.py  account.py  account_type.py  acme_device_attestation_provisioner.py  acme_device_attestation_provisioner_attestation_formats_item.py  acme_provisioner.py  acme_provisioner_challenges_item.py  agent_configuration.py  amazon_web_services.py  attestation_authority.py  authority.py  authority_csr.py  authority_type.py  aws_provisioner.py  awsvm_device_type.py  azure_provisioner.py  azure_vm_device_type.py  basic_auth.py  basic_constraints.py  browser.py  certificate_field_device_metadata.py  certificate_field_list.py  certificate_field_static.py  collection.py  collection_instance.py  device_collection.py  device_collection_account.py  device_collection_device_type.py  device_enrollment_token.py  distinguished_name.py  email.py  endpoint_configuration.py  endpoint_configuration_kind.py  error.py  ethernet.py  extra_name.py  gcp_provisioner.py  gcpvm_device_type.py  get_platforms_pagination_type_0.py  get_ssh_groups_pagination.py  (+88 more)
(+66 files in other folders)
